examples/errors/parsing/spec_tree.cn
sort Tree(a) = { Leaf : a | Node : (Tree(a) * Tree(a)) }

fun size : Tree(Int) -> Int [spec] = {
    Leaf x -> 1
  | Node (l, r) -> size l + size r
}

fun depth : Tree(Int) -> Int [spec] = {
    Leaf x -> 0
  | Node (l, r) ->
      if depth l == depth r then 1 + depth l
      else 1 + depth r
}

main : () [impure] = ()
